further tweaks to some design changes

--- a/wp-content/themes/nu-start-child/src/styles/_index.scss
+++ b/wp-content/themes/nu-start-child/src/styles/_index.scss
@@ -23,6 +23,7 @@
 		@import "./refactored/slider-navigation";
 		@import "./refactored/almost-patterns";
 		@import "./refactored/slide-contents";
+		@import "./refactored/pillars-slide";
 		
 	}
 }
