--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/blocks/_index.scss
@@ -1,6 +1,7 @@
 @import "./general-block-basics";
 //
-@import "./buttons";
+// @import "./buttons";
+@import "./button";
 @import "./columns";
 @import "./columns-column";
 @import "./cover";
