--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/grid-item-template-styles/_is-project.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/grid-item-template-styles/_is-project.scss
@@ -8,9 +8,16 @@
 
 	> a.contains-clickable-area {
 		background-color: var(--wp--preset--color--white-2); 
-		@include nu_micon("\e5c8", after);
-		&::after {
-			transform: rotate(315deg) translate(80px, 35px); 
+		@include nu_micon("\e0b2", after);
+		&:after {
+			position: absolute; 
+			right: 15px; 
+			top: 10px; 
+
+			@media screen and (max-width: 782px) {
+				top: unset; 
+				bottom: 10px; 
+			}
 		}
 	}
 
