--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/paragraph.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/paragraph.scss
@@ -1,8 +1,4 @@
-/* 
-
-	this handles generic paragraphs that could be anywhere ( paragraph blocks dont get a special class )
-
-*/
+@import '../library/';
 
 p {
 	a {
