--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/_index.scss
@@ -7,7 +7,7 @@
 @import './src/site-logo';
 @import './src/widgets-as-alerts';
 @import './src/nu_global_elements';
-
+@import './src/wp-forms';
 
 
 @import './src/elems/typography';
