--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_misc-custom-elems.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/src/elems/_misc-custom-elems.scss
@@ -1,3 +1,17 @@
+.widget_nav_menu {
+	ul.menu {
+		padding: 0;
+	}
+	ul.sub-menu {
+		padding: 0;
+		padding-left: $base-margin;
+	}
+	ul {
+		list-style-type: none;
+		list-style: none;
+	}
+}
+
 // ? the custom SVG icons currently just used in the footer
 .nu__customsvg {
 	display: inline-block;
