--- a/wp-content/themes/nu-start/__precomp/source/css/frontend/_index.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/frontend/_index.scss
@@ -15,3 +15,25 @@
 @import './src/elems/misc-custom-elems';
 
 // 
+
+
+html {
+	box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+	box-sizing: inherit;
+}
+
+// reset body styling to brand
+html :where(body:not(.wp-admin), .editor-styles-wrapper) {
+	@extend %base_body_style;
+	position: relative;
+	z-index: 1;
+
+	a {
+		color: currentColor;
+		text-decoration: none;
+	}
+}
