--- a/wp-content/themes/nu-start/__precomp/source/css/blocks/navigation.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/blocks/navigation.scss
@@ -25,7 +25,7 @@ nav.wp-block-navigation {
 	text-align: left;
 
 	.wp-block-navigation__container {
-		// gap: 0;
+		gap: 0;
 	}
 
 	&.has-background {
