--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
@@ -196,6 +196,9 @@ body.wp-admin .nu_posts-grid .grid-item a {
 
 
 */
+.nu_posts-grid:not(:first-child) {
+  margin-top: 64px;
+}
 .nu_posts-grid ul {
   list-style: none;
   list-style-type: none;
