--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
@@ -91,6 +91,9 @@ body.wp-admin {
 */
 
 .nu_posts-grid {
+	&:not(:first-child){
+		margin-top: $margin_4x;
+	}
 	// ? resets just in case
 	ul {
 		list-style: none;
