--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
@@ -116,6 +116,8 @@ body.wp-admin {
 		}
 		figure {
 			flex: none;
+			max-width: 100%;
+			overflow: hidden;
 		}
 		img {
 			@extend %transition;
